--- a/frontend/src/components/PageLayout.module.css
+++ b/frontend/src/components/PageLayout.module.css
@@ -8,7 +8,7 @@
 
 .header {
   height: 72px; /* Новая, уменьшенная высота шапки */
-  background-image: url('https://i.postimg.cc/fTRHTcDT/image.webp');
+  background-image: url('https://i.postimg.cc/28jH8PnZ/image.webp');
   background-size: contain;
   background-position: center;
   position: sticky;
