--- a/frontend/src/components/BottomNav.module.css
+++ b/frontend/src/components/BottomNav.module.css
@@ -12,7 +12,7 @@
 
   display: flex;
   justify-content: space-around;
-  background-color: #5CA14A;
+  background-color: #408200;
   
   height: 60px;
   padding: 5px 0;
