--- a/frontend/src/components/BottomNav.module.css
+++ b/frontend/src/components/BottomNav.module.css
@@ -32,7 +32,7 @@
   border: none;
   background: none;
   cursor: pointer;
-  color: #3F7132;
+  color: #62A650;
   height: 100%; /* Растягиваем кнопку на всю высоту */
 }
 
