--- a/frontend/src/components/BonusCard.module.css
+++ b/frontend/src/components/BonusCard.module.css
@@ -77,7 +77,7 @@
   font-weight: bold;
 }
 .barcodeWrapper {
-  background-color: #000000;
+  background-color: #ffffff;
   border-radius: 12px;
   padding: 15px 10px;
   /* --- ИЗМЕНЕНИЕ: Выравниваем штрих-код по центру, если он занимает не всю ширину --- */
@@ -94,5 +94,5 @@
   font-family: 'Arial', sans-serif !important; /* Убедимся, что шрифт корректный */
 }
 .barcodeWrapper svg rect {
-  fill: #ffffff; /* Фон для штрих-кода, если нужно */
+  fill: #000000; /* Фон для штрих-кода, если нужно */
 }
