--- a/frontend/src/pages/HomePage.module.css
+++ b/frontend/src/pages/HomePage.module.css
@@ -8,7 +8,7 @@
 
 .header {
   height: 250px;
-  background-image: url('https://i.postimg.cc/d30CQYSV/Frame-2131328061-11.webp');
+  background-image: url('https://i.postimg.cc/rw5Vy6Vk/1.webp');
   background-size: cover;
   background-position: center;
   position: sticky;
