--- a/frontend/src/components/PageLayout.module.css
+++ b/frontend/src/components/PageLayout.module.css
@@ -7,8 +7,8 @@
 }
 
 .header {
-  height: 65px; /* Новая, уменьшенная высота шапки */
-  background-image: url('https://i.postimg.cc/28jH8PnZ/image.webp');
+  height: 100px; /* Новая, уменьшенная высота шапки */
+  background-image: url('https://i.postimg.cc/qMPBdBdw/image.webp');
   background-size: contain;
   background-position: center;
   position: sticky;
